@@ -1,5 +1,5 @@
 Name:			agum
-Version:		2.6
+Version:		2.7
 Maintainer:		ramsdell@mitre.org
 Cabal-Version:		>= 1.6
 License:		GPL
